2002-04-01  Terry Biggs <tbiggs@users.sourceforge.net>

	* fixed detach interlinear crash when Main Text module
	  is duplicated in interlinear.


2002-03-30  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed on_link2_clicked from gs_html.c because
	  it was no longer used.
	* added view in viewer and/or Dict/Lex pane option to
	  preferences dialog.
	* added choice for viewer lex modules - you can now view one 
	  module in the viewer and another in the Dict/Lex pane.
	* hopefully fixed the detach interlinear crash.

2002-03-28  Terry Biggs <tbiggs@users.sourceforge.net>

	* shortcut bar viewer is made visible when a word is clicked
	  in a Bible text ,Commentary or Book pane.

2002-03-28  Terry Biggs <tbiggs@users.sourceforge.net>

	* reworked some of the save and load bookmarks code
	  to work with Victor's changes	
	* removed unused button form shortcut bar verse list
	* added view tab item to gbs popup menu
	
2002-03-28  Victor Porton  <porton@localhost>

	* rewritten some of bookmarks code

2002-03-26 Terry Biggs <tbiggs@users.sourceforge.net>

	* removed sw_utility.* it was no longer used
	* reworked saveshortcutbarSW() in sw_shortcutbar.cpp to remove
	  annoying unbalanced bracket warning during make

2002-03-26 Victor Porton <porton@narod.ru>

	* fixed crash if an interlinear module is NULL

2002-03-21 Terry Biggs <tbiggs@users.sourceforge.net>

	* a single click with left button will lookup word under
	  cursor in current Dict/Lex module and display it in
	  shortcut bar viewer. Works in gbs, texts, and comm windows.


2002-03-14 Terry Biggs <tbiggs@users.sourceforge.net>

	* adding a new bookmark group now adds a menu item to
	  the add bookmark menus.
	* fixed the detached interlinear not changing modules bug
	* setup druid now shows correct gnomesword version number
	* notebook tab menus now display last item correctly.
	* added find dialog that can be used outside of html editor
	* added files gs_find_dlg.c and gs_find_dlg.h

